--- a/HSK more content/Languages/Russian/DefInjected/ThingDefs/Races_Mechanoid.xml
+++ b/HSK more content/Languages/Russian/DefInjected/ThingDefs/Races_Mechanoid.xml
@@ -3,7 +3,7 @@
 
 <Mech_Reaper_HMC.label>рипер</Mech_Reaper_HMC.label>
 <Mech_Reaper_HMC.description>Очень мобильный механоид ближнего боя.</Mech_Reaper_HMC.description>
-<Corpse_Mech_Reaper_HMC.label>Останки рипера</Corpse_Mech_Reaper_HMC.label>
+<Corpse_Mech_Reaper_HMC.label>останки рипера</Corpse_Mech_Reaper_HMC.label>
 <Corpse_Mech_Reaper_HMC.description>Останки рипера.</Corpse_Mech_Reaper_HMC.description>
 
 </LanguageData>
