--- a/HSK more content/Languages/Russian/DefInjected/CombatExtended.AmmoSetDefs/Sets.xml
+++ b/HSK more content/Languages/Russian/DefInjected/CombatExtended.AmmoSetDefs/Sets.xml
@@ -1,8 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <LanguageData>
-	
+
+	<AmmoSet_CannonBall_HMC.label>Пушечное ядро</AmmoSet_CannonBall_HMC.label>
 	<AmmoSet_762x54mmR.label>7.62x54 мм R</AmmoSet_762x54mmR.label>
 	<AmmoSet_545x39mmSoviet.label>5.45x39 мм Soviet</AmmoSet_545x39mmSoviet.label>
 	<AmmoSet_9x39mmSoviet.label>9x39 мм Soviet</AmmoSet_9x39mmSoviet.label>
+	<AmmoSet_473x33mmCaseless.label>4.73x33 мм Безгильзовый</AmmoSet_473x33mmCaseless.label>
 
 </LanguageData>
