--- a/HSK more content/Languages/Russian/DefInjected/ThingDefs/Items_Turrets.xml
+++ b/HSK more content/Languages/Russian/DefInjected/ThingDefs/Items_Turrets.xml
@@ -2,6 +2,7 @@
 
 <LanguageData>
 
+	<MinifiedCannon_HMC.label>Пушка</MinifiedCannon_HMC.label>
 	<MinifiedTurret_NSV_HMC.label>Стационарный пулемет НСВ «Утёс» калибра 12.7x108 мм</MinifiedTurret_NSV_HMC.label>
 	<MinifiedTurret_LWMMGmounted_HMC.label>Стационарный пулемет LWMMG калибра .338</MinifiedTurret_LWMMGmounted_HMC.label>
 	<HMC_MinifiedMicroTurretGun.label>Автоматическая микро-турель калибра 9x19 мм</HMC_MinifiedMicroTurretGun.label>
