--- a/HSK more content/Languages/Russian/DefInjected/ThingDefs/Weapons_Turrets_HMC.xml
+++ b/HSK more content/Languages/Russian/DefInjected/ThingDefs/Weapons_Turrets_HMC.xml
@@ -2,6 +2,11 @@
 
 <LanguageData>
 
+	<!-- ==================== Cannons ========================== -->
+
+	<Gun_Cannon_HMC.label>Орудие пушки</Gun_Cannon_HMC.label> 
+	<Gun_Cannon_HMC.description>Орудие управляемой пушки для забрасывания снарядов на головы врагов.</Gun_Cannon_HMC.description> 
+
 	<!-- ==================== Machine guns ========================== -->
 
 	<Gun_NSV_HMC.label>Орудие НСВ-12.7 «Утёс»</Gun_NSV_HMC.label> 
