Development branch update to 0.45.2 ver.
Обновление ветки Development (для разработки) до версии 0.45.2.

--- a/HSK more content/Languages/Russian/DefInjected/GeneDef/GeneDefs_Spectrum.xml
+++ b/HSK more content/Languages/Russian/DefInjected/GeneDef/GeneDefs_Spectrum.xml
@@ -50,4 +50,8 @@
   <HMC_BA_DevilTail.description>У носителей этого гена растут хвосты, похожие на бесовые или импидные.</HMC_BA_DevilTail.description>
   <HMC_BA_DevilTail.labelShortAdj>дьявол</HMC_BA_DevilTail.labelShortAdj>
 
+  <Eyes_Golden_HMC.label>золотые глаза</Eyes_Golden_HMC.label>
+  <Eyes_Golden_HMC.description>У носителей этого гена глаза имеют золотой цвет.</Eyes_Golden_HMC.description>
+  <Eyes_Golden_HMC.labelShortAdj>златоглазки</Eyes_Golden_HMC.labelShortAdj>
+
 </LanguageData>
