--- a/HSK more content/Languages/Russian/DefInjected/ResearchProjectDef/Research_Armor.xml
+++ b/HSK more content/Languages/Russian/DefInjected/ResearchProjectDef/Research_Armor.xml
@@ -2,6 +2,6 @@
 <LanguageData>
 
     <Armor_F1_HMC.label>Технологии Р.П.Б.</Armor_F1_HMC.label>
-    <Armor_F1_HMC.description>Технологии изготовления роботизированной полисиловой брони вида «Персональная крепость», способной поглощать колоссальное количество урона, делая владельца практически неуязвимым к обычному огнестрельному вооружению.</Armor_F1_HMC.description>
+    <Armor_F1_HMC.description>Технологии изготовления роботизированной полисиловой брони вида «Персональная крепость», способной поглощать колоссальное количество урона, делая владельца практически неуязвимым к обычному огнестрельному вооружению. Для исследования требуется чертёж.</Armor_F1_HMC.description>
 
 </LanguageData>
